<resources>
    <string name="app_name">GPA_patiln1_Calculator</string>
    <string name="prompt1">Grade 1:</string>
    <string name="prompt2">Grade 2:</string>
    <string name="prompt3">Grade 3:</string>
    <string name="prompt4">Grade 4:</string>
    <string name="prompt5">Grade 5:</string>
    <string name="button">Compute GPA</string>
    <string name="input_hint">0-100</string>
</resources>