<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/label5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp"
            android:layout_marginBottom="204dp"
            android:gravity="center"
            android:text="@string/prompt5"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/grade5"
            app:layout_constraintHorizontal_bias="0.037"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/label3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp"
            android:layout_marginBottom="64dp"
            android:gravity="center"
            android:text="@string/prompt3"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/label4"
            app:layout_constraintEnd_toStartOf="@+id/grade3"
            app:layout_constraintHorizontal_bias="0.037"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/label4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp"
            android:layout_marginBottom="56dp"
            android:gravity="center"
            android:text="@string/prompt4"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/label5"
            app:layout_constraintEnd_toStartOf="@+id/grade4"
            app:layout_constraintHorizontal_bias="0.037"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp"
            android:layout_marginBottom="68dp"
            android:gravity="center"
            android:text="@string/prompt1"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/label2"
            app:layout_constraintEnd_toStartOf="@+id/grade1"
            app:layout_constraintHorizontal_bias="0.037"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/label2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp"
            android:layout_marginBottom="64dp"
            android:gravity="center"
            android:text="@string/prompt2"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/label3"
            app:layout_constraintEnd_toStartOf="@+id/grade2"
            app:layout_constraintHorizontal_bias="0.037"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="162dp"
            android:layout_marginLeft="162dp"
            android:layout_marginEnd="161dp"
            android:layout_marginRight="161dp"
            android:layout_marginBottom="93dp"
            android:text="@string/button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/gpa"
            android:layout_width="122dp"
            android:layout_height="65dp"
            android:layout_marginStart="171dp"
            android:layout_marginLeft="171dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="171dp"
            android:layout_marginRight="171dp"
            android:gravity="center"
            android:text="GPA"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <EditText
            android:id="@+id/grade1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="44dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/input_hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/grade2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/grade2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="44dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/input_hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/grade3"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/grade3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="44dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/input_hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/grade4"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/grade4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="44dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/input_hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/grade5"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/grade5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="44dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/input_hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>